hello world level functionality of lookup table dockerfile.